<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_general">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_usecelsius"
            android:summaryOff="@string/pref_summary_fahrenheit"
            android:summaryOn="@string/pref_summary_celsius"
            android:title="@string/pref_title_units" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_followgps"
            android:summary="@string/pref_summary_currentlocation"
            android:title="@string/label_currentlocation" />

        <com.thewizrd.simpleweather.preferences.CustomDropDownPreference
            android:defaultValue="60"
            android:entries="@array/refreshinterval_entries"
            android:entryValues="@array/refreshinterval_values"
            android:key="key_refreshinterval"
            android:summary="%s"
            android:title="@string/pref_title_refreshinterval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_notification"
        android:key="category_notification">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_ongoingnotification"
            android:summary="@string/pref_summary_notification"
            android:title="@string/pref_title_onnotification" />

        <com.thewizrd.simpleweather.preferences.CustomDropDownPreference
            android:defaultValue="0"
            android:dependency="key_ongoingnotification"
            android:entries="@array/notification_entries"
            android:entryValues="@array/notification_values"
            android:key="key_notificationicon"
            android:summary="%s"
            android:title="@string/pref_title_notificationicon" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_usealerts"
            android:summary="@string/pref_summary_alerts"
            android:title="@string/pref_title_alerts" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_api"
        android:key="category_api">

        <com.thewizrd.simpleweather.preferences.CustomDropDownPreference
            android:key="API"
            android:summary="%s"
            android:title="@string/api_label" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_usepersonalkey"
            android:summary="@string/pref_summary_personalkey"
            android:title="@string/pref_title_personalkey" />

        <Preference
            android:key="key_apiregister"
            android:summary="@string/pref_summary_apiregister"
            android:title="@string/pref_title_apiregister" />

        <EditTextPreference
            android:key="API_KEY"
            android:singleLine="true"
            android:summary="@string/pref_summary_apikey"
            android:title="@string/key_hint" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_about">

        <Preference
            android:key="key_aboutapp"
            android:title="@string/pref_title_about_app" />

    </PreferenceCategory>

</PreferenceScreen>
