<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_providers">

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:summary="@string/copyright_here"
            android:title="@string/api_here"
            android:widgetLayout="@layout/credit_here">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://here.com/en" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:summary="@string/copyright_apple_weather"
            android:title="@string/api_apple_weather"
            android:widgetLayout="@layout/credit_apple_weather">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://weatherkit.apple.com/legal-attribution.html" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_metno"
            android:widgetLayout="@layout/credit_metno">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.met.no/en" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_nws"
            android:widgetLayout="@layout/credit_nws">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.weather.gov" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_owm"
            android:widgetLayout="@layout/credit_openweathermap">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.openweathermap.org" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_lociq"
            android:widgetLayout="@layout/credit_lociq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://locationiq.com" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_waqi"
            android:widgetLayout="@layout/credit_waqi">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://aqicn.org" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_wunlocked"
            android:widgetLayout="@layout/credit_wunlocked">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://developer.weatherunlocked.com/" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_weatherapi"
            android:widgetLayout="@layout/credit_weatherapi">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.weatherapi.com/" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_tomorrowio"
            android:widgetLayout="@layout/credit_tomorrowio">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://tomorrow.io/" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_brightsky"
            android:widgetLayout="@layout/credit_dwd">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://brightsky.dev/" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_eccc"
            android:widgetLayout="@layout/credit_eccc">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.weather.gc.ca/" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

        <com.thewizrd.simpleweather.preferences.ProviderIconPreference
            android:title="@string/api_openmeteo"
            android:widgetLayout="@layout/credit_openmeteo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://open-meteo.com/" />
        </com.thewizrd.simpleweather.preferences.ProviderIconPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_icons"
        android:key="key_caticons" />

</PreferenceScreen>